# EXPoly

./: .gitignore  BLENDER_ANIMATION_USAGE.md  BLENDER_GLASS_MATERIALS_USAGE.md  BLENDER_RENDER_USAGE.md  BLENDER_WORKFLOW.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  EXTRACT_GEOMETRY_NODES.md  FILE_CHECKLIST.md  FINAL_CHECKLIST.md  GITHUB_SETUP.md  GITHUB_UPLOAD_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  PARAVIEW_INSTALL.md  PYVISTA_VISUALIZATION_USAGE.md  QUICK_START.md  README.md  README_GITHUB.md  REFACTORING_PLAN.md  STAGE1_SUMMARY.md  STAGE2_SUMMARY.md  STAGE3_SUMMARY.md  STAGE4_SUMMARY.md  STAGE5_SUMMARY.md  UPDATE_BLEND_FILE.md  UPLOAD_COMMANDS.md  UPLOAD_NOW.sh  VISUALIZATION_README.md  blender_animation_workflow.py  blender_read_geometry_nodes.py  blender_read_geometry_nodes_internal.py  blender_read_rotationpivot.py  blender_read_settings.py  blender_render.py  blender_setup_glass_materials.py  export_grain_points.py  grain_111_margin_points.ply  grain_111_margin_points.xyz  (+8 more)
.github/workflows/: ci.yml  tests.yml
benchmarks/: README.md  benchmark.py  generate_toy_data.py
docs/: benchmarks.md  use_cases.md
examples/: README.md  minimal_example.py  toy_data_generator.py
expoly-alpoly-pytest/: README.md
expoly-alpoly-pytest/tests/: conftest.py  test_frames_alpoly.py  test_frames_vis.py
expoly-carve-pytest/: README.md
expoly-carve-pytest/tests/: test_carve_plot.py  test_carve_with_dream3d.py
scripts/: diagnose_extend_grain.py  export_legacy_steps_for_web.py
src/expoly/: Untitled-1.ipynb  __init__.py  carve.py  cli.py  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  fill_hole.ipynb  frames.py  general_func.py  generate_voronoi.py  pipeline.py  polish.py  voxelized.py
src/expoly/legacy_scripts/: Execute_all.py  Multiprocessing.py  Polish_to_lmp.py  grid.py  readDATA.py
tests/: __init__.py  conftest.py  test_carve.py  test_cli.py  test_frames.py  test_import.py  test_polish.py
web_app/: README.md  app.py  server.py
