
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expoly"
version = "0.2.0"
description = "Voxel-to-atomistic conversion and LAMMPS pipeline tools (with legacy runners)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Meizhong Lyu"}]
license = {text = "MIT"}
dependencies = ["numpy","pandas","scipy","jinja2","h5py", "scikit-learn", "ovito", "plotly"]

[project.optional-dependencies]
dev = ["pytest","ruff","mypy", "plotly", "matplotlib"]

[project.scripts]
expoly = "expoly.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["expoly*"]
